# opencv-tests

./: .gitignore  CMakeLists.txt
scripts/: setup.sh
tests/: recover_pose_test.cpp
